# webcomics

./: .gitignore  Makefile  docker-compose.yml  shell.nix  webcomics.cabal
config/: config.yaml
src/: App.hs  Config.hs  Database.hs  Lenses.hs  Main.hs  Rules.hs  Spider.hs
src/Database/: Migration.hs
