name:                webcomics
version:             0.1.0.0
synopsis:            Webcomics spider
-- description:
homepage:            https://github.com/githubuser/webcomics#readme
license:             BSD3
license-file:        LICENSE
author:              Mats Rauhala
maintainer:          mats.rauhala@iki.fi
copyright:           2017 Mats Rauhala
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable webcomics
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  other-modules:       Database
                     , Database.Migration
                     , Config
                     , Rules
                     , Spider
                     , App
                     , Lenses
  build-depends:       base >= 4.7 && < 5
                     , xml-conduit
                     , html-conduit
                     , wreq
                     , postgresql-simple
                     , persistent-postgresql
                     , persistent-template
                     , persistent
                     , mtl
                     , transformers
                     , bytestring
                     , text
                     , servant
                     , servant-server
                     , wai
                     , warp
                     , yaml
                     , aeson
                     , microlens
                     , microlens-th
                     , resource-pool
                     , monad-control
                     , monad-logger
                     , lifted-base
                     , lifted-async
                     , network-uri
